# rust-wasm-introduction

./: .gitignore  Cargo.toml  LICENSE.md  README.md
browser/: .eslintrc  package.json  tsconfig.json  webpack.config.js
browser/src/: index.ts  load-wasm.ts
nodejs/: package.json  tsconfig.json
nodejs/src/naive-fibonacci/: benchmark.ts  index.spec.ts  index.ts
src/: lib.rs
